force-app/main/default/objects/PAF_Quote__c/PAF_Quote__c.object-meta.xml
<CustomObject>
    <label>PAF Quote</label>
    <nameField>
        <displayFormat>PAF Quote # - {00000}</displayFormat>
        <label>PAF Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>