force-app/main/default/objects/PAF_Quote__c/fields/Additional_6Hr_lounge_pass__c.field-meta.xml
<CustomField>
    <fullName>Additional_6Hr_lounge_pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional 6Hr lounge pass</label>
    <type>Checkbox</type>
</CustomField>