force-app/main/default/objects/PAF_Quote__c/fields/Available_Cities__c.field-meta.xml
<CustomField>
    <fullName>Available_Cities__c</fullName>
    <formula>IF(INCLUDES(  PAF_Packagee__r.Stopover__c  , &quot;AUH&quot;), &quot;AUH ;&quot;, NULL) +
IF(INCLUDES(  PAF_Packagee__r.Stopover__c  , &quot;HKG&quot;), &quot;HKG ;&quot;, NULL) +
IF(INCLUDES(  PAF_Packagee__r.Stopover__c  , &quot;TG&quot;), &quot;BKK ;&quot;, NULL) +
IF(INCLUDES(  PAF_Packagee__r.Stopover__c  , &quot;HA&quot;), &quot;HNL ;&quot;, NULL) +
IF(INCLUDES( PAF_Packagee__r.Stopover__c  , &quot;DXB&quot;), &quot;DXB ;&quot;, NULL) +
IF(INCLUDES( PAF_Packagee__r.Stopover__c  , &quot;LA&quot;), &quot;SIN ;&quot;, NULL) +
IF(INCLUDES( PAF_Packagee__r.Stopover__c  , &quot;SIN&quot; ), &quot;SIN &quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Cities</label>
    <type>Text</type>
</CustomField>