force-app/main/default/objects/PAF_Quote__c/fields/Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Base_Fare__c</fullName>
    <formula>IF(  Seasonality__c  =  &quot;Low&quot; ,  PAF_Packagee__r.Low_Season_Base_Fare__c  , 
IF(  Seasonality__c  =  &quot;Shoulder&quot; ,  PAF_Packagee__r.Shoulder_Season_Base_Fare__c  , 
IF(  Seasonality__c  =  &quot;High&quot; ,  PAF_Packagee__r.High_Season_Base_Fare__c  , 
IF(  Seasonality__c  =  &quot;Sale&quot; ,  PAF_Packagee__r.Sale_Season_Base_Fare__c  , 
  PAF_Packagee__r.High_Season_Base_Fare__c  ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>