force-app/main/default/objects/PAF_Quote__c/fields/Business_Class_Upgrade_SurchargeCheck_Bo__c.field-meta.xml
<CustomField>
    <fullName>Business_Class_Upgrade_SurchargeCheck_Bo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Class Upgrade</label>
    <type>Checkbox</type>
</CustomField>