force-app/main/default/objects/PAF_Quote__c/fields/Child_Baby_Seat__c.field-meta.xml
<CustomField>
    <fullName>Child_Baby_Seat__c</fullName>
    <inlineHelpText>Cost must be calculated and confirmed manually if Child seat, Multi Pickup or Oversize Luggage is selected</inlineHelpText>
    <label>Child/Baby Seat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>