force-app/main/default/objects/PAF_Quote__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <label>Outbound Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>BNE</fullName>
            </value>
            <value>
                <fullName>MEL</fullName>
            </value>
            <value>
                <fullName>ADL</fullName>
            </value>
            <value>
                <fullName>PER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>