force-app/main/default/objects/PAF_Quote__c/fields/Departure_Day__c.field-meta.xml
<CustomField>
    <fullName>Departure_Day__c</fullName>
    <formula>IF(  zzzOutbound_datetime__c  = 0 , &quot;Saturday&quot;, 
IF( zzzOutbound_datetime__c = 1 , &quot;Sunday&quot;,
IF( zzzOutbound_datetime__c = 2 , &quot;Monday&quot;,
IF( zzzOutbound_datetime__c = 3 , &quot;Tuesday&quot;,
IF( zzzOutbound_datetime__c = 4 , &quot;Wednesday&quot;,
IF( zzzOutbound_datetime__c = 5 , &quot;Thursday&quot;,
IF( zzzOutbound_datetime__c = 6 , &quot;Friday&quot;,&quot;Error&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure - Day</label>
    <type>Text</type>
</CustomField>