force-app/main/default/objects/PAF_Quote__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>-</label>
    <length>1</length>
    <type>Text</type>
</CustomField>