force-app/main/default/objects/PAF_Quote__c/fields/Flight_Details__c.field-meta.xml
<CustomField>
    <fullName>Flight_Details__c</fullName>
    <label>Flight Details(GAL Summary)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>