force-app/main/default/objects/PAF_Quote__c/fields/Flights_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Flights_Additional_Information__c</fullName>
    <label>Flights Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>