force-app/main/default/objects/PAF_Quote__c/fields/hours__c.field-meta.xml
<CustomField>
    <fullName>hours__c</fullName>
    <formula>minutes__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>