force-app/main/default/objects/PAF_Quote__c/fields/Inbound_City__c.field-meta.xml
<CustomField>
    <fullName>Inbound_City__c</fullName>
    <label>Inbound City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>ATH</fullName>
            </value>
            <value>
                <fullName>BCN</fullName>
            </value>
            <value>
                <fullName>BOG</fullName>
            </value>
            <value>
                <fullName>BUE</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>DFW</fullName>
            </value>
            <value>
                <fullName>DUB</fullName>
            </value>
            <value>
                <fullName>GIG</fullName>
            </value>
            <value>
                <fullName>HAM</fullName>
            </value>
            <value>
                <fullName>JNB</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>LIM</fullName>
            </value>
            <value>
                <fullName>LON</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>MIA</fullName>
            </value>
            <value>
                <fullName>MRU</fullName>
            </value>
            <value>
                <fullName>MXP</fullName>
            </value>
            <value>
                <fullName>NBO</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>PRG</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>SCL</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SFO</fullName>
            </value>
            <value>
                <fullName>VCE</fullName>
            </value>
            <value>
                <fullName>VIE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>