force-app/main/default/objects/PAF_Quote__c/fields/Inbound_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Transfer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Inbound Transfer</label>
    <type>Checkbox</type>
</CustomField>