force-app/main/default/objects/PAF_Quote__c/fields/Insurance_Description__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Description__c</fullName>
    <label>Insurance Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>