force-app/main/default/objects/PAF_Quote__c/fields/minutes__c.field-meta.xml
<CustomField>
    <fullName>minutes__c</fullName>
    <label>minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>