force-app/main/default/objects/PAF_Quote__c/fields/Multi_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Multi_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cost must be calculated and confirmed manually if Child seat, Multi Pickup or Oversize Luggage is selected</inlineHelpText>
    <label>Multi Pickup</label>
    <type>Checkbox</type>
</CustomField>