force-app/main/default/objects/PAF_Quote__c/fields/nAME_FROM_ACCOUNT_Lead__c.field-meta.xml
<CustomField>
    <fullName>nAME_FROM_ACCOUNT_Lead__c</fullName>
    <formula>IF( PAFJunctLookup__r.Account__r.Lead_Contact_del__c ,  PAFJunctLookup__r.Account__r.Name , &quot;Lead Contact Required&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nAME - FROM ACCOUNT(Lead)</label>
    <type>Text</type>
</CustomField>