force-app/main/default/objects/PAF_Quote__c/fields/Nett_Air__c.field-meta.xml
<CustomField>
    <fullName>Nett_Air__c</fullName>
    <label>Base Air</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>