force-app/main/default/objects/PAF_Quote__c/fields/Others_Description__c.field-meta.xml
<CustomField>
    <fullName>Others_Description__c</fullName>
    <label>Others Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>