force-app/main/default/objects/PAF_Quote__c/fields/Out__c.field-meta.xml
<CustomField>
    <fullName>Out__c</fullName>
    <label>Out</label>
    <length>3</length>
    <type>Text</type>
</CustomField>