force-app/main/default/objects/PAF_Quote__c/fields/Outbound_gateway_for_google_maps__c.field-meta.xml
<CustomField>
    <fullName>Outbound_gateway_for_google_maps__c</fullName>
    <label>Outbound gateway for google maps</label>
    <length>20</length>
    <type>Text</type>
</CustomField>