force-app/main/default/objects/PAF_Quote__c/fields/Outbound_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Transfer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Outbound Transfer</label>
    <type>Checkbox</type>
</CustomField>