force-app/main/default/objects/PAF_Quote__c/fields/outtext__c.field-meta.xml
<CustomField>
    <fullName>outtext__c</fullName>
    <formula>LEFT(TEXT(  PAFPACKQUOTEJUNC__r.Inbound_Gateway__c  ), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>outtext</label>
    <type>Text</type>
</CustomField>