force-app/main/default/objects/PAF_Quote__c/fields/Package_Price_PP__c.field-meta.xml
<CustomField>
    <fullName>Package_Price_PP__c</fullName>
    <label>Package Price($/PP)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>