force-app/main/default/objects/PAF_Quote__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <formula>PAF_Packagee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PackageName</label>
    <type>Text</type>
</CustomField>