force-app/main/default/objects/PAF_Quote__c/fields/PAF_Packagee__c.field-meta.xml
<CustomField>
    <fullName>PAF_Packagee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PAF Package</label>
    <referenceTo>PAF_Package__c</referenceTo>
    <relationshipLabel>PAF Quote</relationshipLabel>
    <relationshipName>PAF_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>