force-app/main/default/objects/PAF_Quote__c/fields/PAFJunctLookup__c.field-meta.xml
<CustomField>
    <fullName>PAFJunctLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAFJunc</label>
    <referenceTo>PAF_Profile__c</referenceTo>
    <relationshipLabel>PAF Quote</relationshipLabel>
    <relationshipName>PAF_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>