force-app/main/default/objects/PAF_Quote__c/fields/PAFPACKQUOTEJUNC__c.field-meta.xml
<CustomField>
    <fullName>PAFPACKQUOTEJUNC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAFPACKQUOTEJUNC</label>
    <referenceTo>PAFPACKQUOTEJUNC__c</referenceTo>
    <relationshipLabel>PAF Quote</relationshipLabel>
    <relationshipName>PAF_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>