force-app/main/default/objects/PAF_Quote__c/fields/PAX__c.field-meta.xml
<CustomField>
    <fullName>PAX__c</fullName>
    <label># PAX</label>
    <summaryForeignKey>PAF_Profile__c.PAF_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>