force-app/main/default/objects/PAF_Quote__c/fields/PER_ADL__c.field-meta.xml
<CustomField>
    <fullName>PER_ADL__c</fullName>
    <label>PER/ADL</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>