force-app/main/default/objects/PAF_Quote__c/fields/Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address__c</fullName>
    <formula>PAFJunctLookup__r.Account__r.BillingStreet &amp; &quot;,&quot; &amp; PAFJunctLookup__r.Account__r.BillingCity &amp; &quot;,&quot; &amp;  PAFJunctLookup__r.Account__r.BillingState</formula>
    <label>Pickup Address</label>
    <type>Text</type>
</CustomField>