force-app/main/default/objects/PAF_Quote__c/fields/Pickup_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Postcode__c</fullName>
    <label>Pickup Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>