force-app/main/default/objects/PAF_Quote__c/fields/Pickup_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Suburb__c</fullName>
    <label>Pickup Suburb</label>
    <length>20</length>
    <type>Text</type>
</CustomField>