force-app/main/default/objects/PAF_Quote__c/fields/Post_Code2__c.field-meta.xml
<CustomField>
    <fullName>Post_Code2__c</fullName>
    <label>Post Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>