force-app/main/default/objects/PAF_Quote__c/fields/Preferred_Seating__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Seating__c</fullName>
    <label>Preferred Seating</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>