force-app/main/default/objects/PAF_Quote__c/fields/Qantas_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Surcharge</label>
    <type>Checkbox</type>
</CustomField>