force-app/main/default/objects/PAF_Quote__c/fields/Qantas_Surchargee__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Surchargee__c</fullName>
    <label>Qantas Surcharge($)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>