force-app/main/default/objects/PAF_Quote__c/fields/Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total__c</fullName>
    <label>Quote Total</label>
    <summarizedField>PAF_Profile__c.Test__c</summarizedField>
    <summaryForeignKey>PAF_Profile__c.PAF_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>