force-app/main/default/objects/PAF_Quote__c/fields/Region_from_Package__c.field-meta.xml
<CustomField>
    <fullName>Region_from_Package__c</fullName>
    <formula>TEXT( PAF_Packagee__r.REGION__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region from Package</label>
    <type>Text</type>
</CustomField>