force-app/main/default/objects/PAF_Quote__c/fields/Return_Day__c.field-meta.xml
<CustomField>
    <fullName>Return_Day__c</fullName>
    <formula>IF( zzzInbound_Day_date_time__c = 0 , &quot;Saturday&quot;, 
IF( zzzInbound_Day_date_time__c = 1 , &quot;Sunday&quot;,
IF( zzzInbound_Day_date_time__c = 2 , &quot;Monday&quot;,
IF( zzzInbound_Day_date_time__c = 3 , &quot;Tuesday&quot;,
IF( zzzInbound_Day_date_time__c = 4 , &quot;Wednesday&quot;,
IF( zzzInbound_Day_date_time__c = 5 , &quot;Thursday&quot;,
IF( zzzInbound_Day_date_time__c = 6 , &quot;Friday&quot;,&quot;Error&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return - Day</label>
    <type>Text</type>
</CustomField>