force-app/main/default/objects/PAF_Quote__c/fields/Seasonality__c.field-meta.xml
<CustomField>
    <fullName>Seasonality__c</fullName>
    <formula>IF( PAF_Packagee__r.Low_Season_Start__c  &lt;=  Departure_Date__c  &amp;&amp;  PAF_Packagee__r.Low_Season_End__c  &gt;=  Departure_Date__c ,     &quot;Low&quot;     ,
IF( PAF_Packagee__r.Sale_Season_Start__c  &lt;=  Departure_Date__c  &amp;&amp;  PAF_Packagee__r.Sale_Season_End__c  &gt;=  Departure_Date__c ,     &quot;Sale&quot;     ,
IF( PAF_Packagee__r.Shoulder_Season_Start__c  &lt;=  Departure_Date__c  &amp;&amp;  PAF_Packagee__r.Shoulder_Season_End__c  &gt;=  Departure_Date__c ,     &quot;Shoulder&quot;     ,
IF( PAF_Packagee__r.High_Season_Start__c  &lt;=  Departure_Date__c  &amp;&amp;  PAF_Packagee__r.High_Season_End__c  &gt;=  Departure_Date__c ,     &quot;High&quot;    ,   &quot;Not Available&quot;  ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seasonality</label>
    <type>Text</type>
</CustomField>