force-app/main/default/objects/PAF_Quote__c/fields/Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sectors__c</fullName>
    <label>Sectors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>