force-app/main/default/objects/PAF_Quote__c/fields/Single_Supplement_PP_N__c.field-meta.xml
<CustomField>
    <fullName>Single_Supplement_PP_N__c</fullName>
    <label>Single Supplement PP/N($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>