force-app/main/default/objects/PAF_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Issue Quote</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Ticketed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>