force-app/main/default/objects/PAF_Quote__c/fields/Stopover_City__c.field-meta.xml
<CustomField>
    <fullName>Stopover_City__c</fullName>
    <label>Stopover City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>