force-app/main/default/objects/PAF_Quote__c/fields/Stopover_Cost__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Cost__c</fullName>
    <formula>((   Stopover_PP_Nn__c   *  value(text( Nighs_Inbound__c )) * value(text( Total_PAX__c )))+(( Stopover_PP_Nn__c *  value(text( Nights__c)) *  value(text( Total_PAX__c )))))* IF( Single_Supplement__c , 2, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stopover Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>