force-app/main/default/objects/PAF_Quote__c/fields/Stopover_cost_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Stopover_cost_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If single supplement is selected, stopover cost must be confirmed</inlineHelpText>
    <label>Stopover cost confirmed</label>
    <type>Checkbox</type>
</CustomField>