force-app/main/default/objects/PAF_Quote__c/fields/Stopover_PP_Nn__c.field-meta.xml
<CustomField>
    <fullName>Stopover_PP_Nn__c</fullName>
    <label>Stopover - PP/N($)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>