force-app/main/default/objects/PAF_Quote__c/fields/Streetttransferpickup__c.field-meta.xml
<CustomField>
    <fullName>Streetttransferpickup__c</fullName>
    <label>Pickup Street</label>
    <length>20</length>
    <type>Text</type>
</CustomField>