force-app/main/default/objects/PAF_Quote__c/fields/testnumber__c.field-meta.xml
<CustomField>
    <fullName>testnumber__c</fullName>
    <label>testnumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>