force-app/main/default/objects/PAF_Quote__c/fields/Total_AUD__c.field-meta.xml
<CustomField>
    <fullName>Total_AUD__c</fullName>
    <label>Total(AUD)</label>
    <summarizedField>PAF_Profile__c.Test__c</summarizedField>
    <summaryForeignKey>PAF_Profile__c.PAF_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>